Jann 30/objects/DepartmentalSuperUser__c.object
<CustomObject>
    <description>Used to select max 5 users who will get read-only access to all IT-SES records of the logged-in user or user selected in requestor field.</description>
    <fields>
        <fullName>Additional_Access_1_Department__c</fullName>
        <formula>If( ISPICKVAL(Viewer1__r.ITPR_Department__c,&apos;ITSES - Requestor&apos;),&apos;ITSES - Requestor&apos;,
If( ISPICKVAL(Viewer1__r.ITPR_Department__c,&apos;ITSES - Legal&apos;),&apos;ITSES - Legal&apos;,
If( ISPICKVAL(Viewer1__r.ITPR_Department__c,&apos;ITSES - Finance&apos;),&apos;ITSES - Finance&apos;,
If( ISPICKVAL(Viewer1__r.ITPR_Department__c,&apos;ITSES - Procurement&apos;),&apos;ITSES - Procurement&apos;,
If( ISPICKVAL(Viewer1__r.ITPR_Department__c,&apos;ITSES - Vendor Governance&apos;),&apos;ITSES - Vendor Governance&apos;,
&apos;&apos;)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Access 1 Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Access_2_Department__c</fullName>
        <formula>If( ISPICKVAL(Viewer2__r.ITPR_Department__c,&apos;ITSES - Requestor&apos;),&apos;ITSES - Requestor&apos;, 
If( ISPICKVAL(Viewer2__r.ITPR_Department__c,&apos;ITSES - Legal&apos;),&apos;ITSES - Legal&apos;, 
If( ISPICKVAL(Viewer2__r.ITPR_Department__c,&apos;ITSES - Finance&apos;),&apos;ITSES - Finance&apos;, 
If( ISPICKVAL(Viewer2__r.ITPR_Department__c,&apos;ITSES - Procurement&apos;),&apos;ITSES - Procurement&apos;, 
If( ISPICKVAL(Viewer2__r.ITPR_Department__c,&apos;ITSES - Vendor Governance&apos;),&apos;ITSES - Vendor Governance&apos;, 
&apos;&apos;) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Access 2 Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Access_3_Department__c</fullName>
        <formula>If( ISPICKVAL(Viewer3__r.ITPR_Department__c,&apos;ITSES - Requestor&apos;),&apos;ITSES - Requestor&apos;, 
If( ISPICKVAL(Viewer3__r.ITPR_Department__c,&apos;ITSES - Legal&apos;),&apos;ITSES - Legal&apos;, 
If( ISPICKVAL(Viewer3__r.ITPR_Department__c,&apos;ITSES - Finance&apos;),&apos;ITSES - Finance&apos;, 
If( ISPICKVAL(Viewer3__r.ITPR_Department__c,&apos;ITSES - Procurement&apos;),&apos;ITSES - Procurement&apos;, 
If( ISPICKVAL(Viewer3__r.ITPR_Department__c,&apos;ITSES - Vendor Governance&apos;),&apos;ITSES - Vendor Governance&apos;, 
&apos;&apos;) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Access 3 Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User whose records would be shared with other users. Would be visible to only ITPR business admin users. For requestor/Assignee  users it be auto-filled with their id.</description>
        <inlineHelpText>Please select the user whose IT-SES records need to be shared.</inlineHelpText>
        <label>From User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Departmental_Super_Users_Requestor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_of_Access_1__c</fullName>
        <description>After selecting the user to know which type of user can allow to use</description>
        <inlineHelpText>Please select a value</inlineHelpText>
        <label>Type of Access 1</label>
        <picklist>
            <picklistValues>
                <fullName>Read Only</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Edit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Access_2__c</fullName>
        <label>Type of Access 2</label>
        <picklist>
            <picklistValues>
                <fullName>Read Only</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Edit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Access_3__c</fullName>
        <label>Type of Access 3</label>
        <picklist>
            <picklistValues>
                <fullName>Read Only</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Edit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Viewer1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This user will have full read-only access to all requests created by the requestor</description>
        <inlineHelpText>Add a user here to have the type of access you select for each user, for all of your requests</inlineHelpText>
        <label>Additional Access 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Departmental_Super_Users_Viewer1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Viewer2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This user will have full read-only access to all requests created by the requestor</description>
        <inlineHelpText>Add a user here to have the type of access you select for each user, for all of your requests</inlineHelpText>
        <label>Additional Access 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Departmental_Super_Users_Viewer2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Viewer3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This user will have full read-only access to all requests created by the requestor</description>
        <inlineHelpText>Add a user here to have the type of access you select for each user, for all of your requests</inlineHelpText>
        <label>Additional Access 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Departmental_Super_Users_Viewer3</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Departmental Super User</label>
    <nameField>
        <displayFormat>DSU-{00000}</displayFormat>
        <label>DepartmentalSuperUser ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Departmental Super Users</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>